--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
         <div id="main">
             <!-- this is introduction  -->
             <div id="introduction">
-                <h3 style="font-family: var(--font-mono); color: var(--cyan); margin-bottom: 18px;">Hi,</h3>
-                <h1 style="font-family: var(--font-sans); font-size: clamp(40px, 8vw, 80px);">I'm Sachin,</h1>
-                <h1 style="font-family: var(--font-sans); font-size: clamp(38px, 8vw, 78px); color: var(--slate);">
-                    Web Developer.
-                </h1>
+                <h3 style="font-family: var(--font-mono); color: var(--cyan); margin-bottom: 18px;font-size: 20px;">Hi,</h3>
+                <h1 style="font-family: var(--font-sans); font-size: clamp(40px, 8vw, 80px);font-size: 50px;">I'm Sachin,Web Developer.</h1>
+                <!-- <h1 style="font-family: var(--font-sans); font-size: clamp(38px, 8vw, 78px); color: var(--slate);">
+                    
+                </h1> -->
                 <div>
                     <p class="smallIntro">
                         Trained, Self-motivated and Hardworking web developer, With a diverse range of skills including Java, SpringBoot, MySQL, HTML, CSS and JavaScript.
@@ -114,13 +114,13 @@
                         </p>
                         <br>
                         <p class="font color size" style="display: inline;">
-                            My expertise lies within web apps, and the main languages in my
+                            My expertise lies in making clean efficient code ready to deploy. 
                         </p>
                         <h4 class="edu" style="font-size: x-large; text-align: left; font-family: var(--font-mono); display: inline;">
                             <mark>Tech Stack</mark>
                         </h4>
-                        <p class="font color size" style="display: inline;">are</p>
-                        <div id="techStack">
+                        <!-- <p class="font color size" style="display: inline;">are</p> -->
+                        <!-- <div id="techStack">
                             <ul>
                                 <li class="color">Java</li>
                                 <li class="color">JavaScript</li>
@@ -134,7 +134,7 @@
                                 <li class="color">Spring Boot</li>
                                 <li class="color">STS</li>
                             </ul>
-                        </div>
+                        </div> -->
                     </div>
                     <div id="myImage">
                         <img src="./source/myImage.png" />
@@ -149,7 +149,7 @@
                     <div class="headArrow"></div>
                 </h1>
                 <div id="mainContainerForSkill">
-                    <h2 class="font">Tech-Stack that I am proficient in</h2>
+                    <!-- <h2 class="font">Tech-Stack that I am proficient in</h2> -->
                     <div class="skillS" data-aos="fade-in">
                         <div>
                             <img src="./source/java1.png" />
@@ -346,12 +346,16 @@
                                     <li><img src="source/js.png" /></li>
                                 </ul>
                                 <div class="project-links">
-                                    <a href="https://github.com/gaurav7ingh/Anthropologie" target="_blank">
+                                    <!-- <a href="https://github.com/gaurav7ingh/Anthropologie" target="_blank">
                                         <img class="git fixLinkForImage" src="./source/github.png" />
-                                    </a>
-                                    <a target="_blank" href="https://anthropologie-1.netlify.app/index.html">
+                                    </a> -->
+
+                                    <a href= "https://github.com/gaurav7ingh/Anthropologie" target="_blank"><button  id="resume">Github</button></a>
+                                    <a href="https://anthropologie-1.netlify.app/index.html " target="_blank"> <button  id="resume">Deployed</button></a>
+
+                                    <!-- <a target="_blank" href="https://anthropologie-1.netlify.app/index.html">
                                         <img class="fixLinkForImage goto" src="./source/goto.png" />
-                                    </a>
+                                    </a> -->
                                 </div>
                             </div>
                         </div>
@@ -378,12 +382,14 @@
                                     <li><img src="source/js.png" /></li>
                                 </ul>
                                 <div class="project-links">
-                                    <a href="https://github.com/NaziaSayyad/panicky-smash-9541" target="_blank">
+                                    <!-- <a href="https://github.com/NaziaSayyad/panicky-smash-9541" target="_blank">
                                         <img class="git fixLinkForImage" src="./source/github.png" />
                                     </a>
                                     <a target="_blank" href=" https://whimsical-bavarois-f46ae2.netlify.app/">
                                         <img class="goto fixLinkForImage" src="./source/goto.png" />
-                                    </a>
+                                    </a> -->
+                                    <a href="https://github.com/NaziaSayyad/panicky-smash-9541"  target="_blank" ><button  id="resume">Github</button></a>
+                                    <a href="https://whimsical-bavarois-f46ae2.netlify.app/"   target="_blank"><button  id="resume">Deployed</button></a>
                                 </div>
                             </div>
                         </div>
@@ -409,13 +415,15 @@
                                     <li><img src="source/java1.png" /></li>
                                     <li><img src="source/mysql.png" /></li>
                                 </ul>
-                                <div class="project-links">
-                                    <a href="https://github.com/ShuklaSachin-2/dead-test-3122" target="_blank">
+                                <div class="project-links" style="justify-content: right;">
+                                    <!-- <a href="https://github.com/ShuklaSachin-2/dead-test-3122" target="_blank">
                                         <img class="git fixLinkForImage" src="./source/github.png" />
                                     </a>
                                     <a target="_blank" href="https://drive.google.com/drive/u/0/folders/1Xrlr5A20vu47_k3nFQ6XWjwY1CbnrxUl">
                                         <img class="goto fixLinkForImage" src="./source/goto.png" />
-                                    </a>
+                                    </a> -->
+                                    <a href="https://github.com/ShuklaSachin-2/dead-test-3122"  target="_blank"><button  id="resume">Github</button></a>
+                                    <a href="https://drive.google.com/drive/u/0/folders/1Xrlr5A20vu47_k3nFQ6XWjwY1CbnrxUl"   target="_blank"><button  id="resume">Deployed</button></a>
                                 </div>
                             </div>
                         </div>
