--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
             <!-- this is the list of items is present in the pages -->
             <div id="selectSection">
-                <div><a href="#HomeSection">About</a></div>
+                <div><a href="#HomeSection">Home</a></div>
                 <div><a href="#aboutSection">About</a></div>
                 <div><a href="#skillSection">Skill</a></div>
                 <div><a href="#workSection">Work</a></div>
