--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
                         <p class="font color size" style="display: inline;">
                             My expertise lies in making clean efficient code ready to deploy. 
                         </p>
-                        <h4 class="edu" style="font-size: x-large; text-align: left; font-family: var(--font-mono); display: inline;">
+                        <!-- <h4 class="edu" style="font-size: x-large; text-align: left; font-family: var(--font-mono); display: inline;">
                             <mark>Tech Stack</mark>
-                        </h4>
+                        </h4> -->
                         <!-- <p class="font color size" style="display: inline;">are</p> -->
                         <!-- <div id="techStack">
                             <ul>
