--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
                 <h2 class="font">My Project's</h2>
 
-                <!-- <div class="fix_flex">
+                <div class="fix_flex">
                     <div class="project-image">
                         <a href="https://github.com/ShuklaSachin-2/light-temper-9603" target="_blank">
                             <img class="fixImageSizeForTheProject" style="z-index: 1;" src="./source/RESTful.png" />
@@ -302,7 +302,7 @@
                             <h3 class="project-title"><a href="https://github.com/ShuklaSachin-2/light-temper-9603" target="_blank">Online Shopping Application</a></h3>
                             <div class="project-description">
                                 <p>
-                                    This is RESTful services for online shopping application where client can update and retrive the data from server. It's a collaborative project concluded in 5 days.
+                                    This is RESTful services for online Cab Booking application where Admin,Customer and Driver can update and retrive the data from server. It's a collaborative project concluded in 5 days.
                                 </p>
                             </div>
                             <ul class="project-tech-list">
@@ -312,16 +312,20 @@
                                 <li><img src="source/hiber.png" /></li>
                             </ul>
                             <div class="project-links">
-                                <a href="https://github.com/ShuklaSachin-2/light-temper-9603" target="_blank">
+                                <!-- <a href="https://github.com/gaurav7ingh/Anthropologie" target="_blank">
                                     <img class="git fixLinkForImage" src="./source/github.png" />
-                                </a>
-                                <a target="_blank" href="https://drive.google.com/file/d/1CTeKQ8u9vowsjTv0TV98B15g8E4zcFCr/view?usp=sharing">
+                                </a> -->
+
+                                <a href= "https://github.com/ShuklaSachin-2/belligerent-crayon-4690" target="_blank"><button  id="resume">Github</button></a>
+                                <a href="https://drive.google.com/file/d/16TbnvKpSbGJ7PNO6xYUE2fi6ONBAiVzl/view?usp=share_link" target="_blank"> <button  id="resume">Deployed</button></a>
+
+                                <!-- <a target="_blank" href="https://anthropologie-1.netlify.app/index.html">
                                     <img class="fixLinkForImage goto" src="./source/goto.png" />
-                                </a>
+                                </a> -->
                             </div>
                         </div>
                     </div>
-                </div> -->
+                </div>
                 <hr>
                 <!-- Project section -->
                 <div id="project" data-aos="fade-in">
