--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             My expertise lies in making clean efficient code ready to deploy. 
                         </p>
                         <br>
-                        <a href= "https://github.com/ShuklaSachin-2/belligerent-crayon-4690" target="_blank" ><button style="margin-top: 20px;" id="resume">Resume</button></a>
+                        <a href= "https://drive.google.com/file/d/1xqkA9u1dUFwG5pcCJx4_mbDwfSR219nd/view?usp=sharing" target="_blank" ><button style="margin-top: 20px;" id="resume">Resume</button></a>
                         
                         <!-- <h4 class="edu" style="font-size: x-large; text-align: left; font-family: var(--font-mono); display: inline;">
                             <mark>Tech Stack</mark>
