--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                     <div class="project-content" data-aos="fade-in">
                         <div>
                             <p class="project-overline">RESTful API</p>
-                            <h3 class="project-title"><a href="https://github.com/ShuklaSachin-2/light-temper-9603" target="_blank">Online Shopping Application</a></h3>
+                            <h3 class="project-title"><a href="https://github.com/ShuklaSachin-2/light-temper-9603" target="_blank">Online Cab Booking Application</a></h3>
                             <div class="project-description">
                                 <p>
                                     This is RESTful services for online Cab Booking application where Admin,Customer and Driver can update and retrive the data from server. It's a collaborative project concluded in 5 days.
