--- a/index.html
+++ b/index.html
@@ -318,9 +318,7 @@
                                 <li><img src="source/hiber.png" /></li>
                             </ul>
                             <div class="project-links">
-                                <!-- <a href="https://github.com/gaurav7ingh/Anthropologie" target="_blank">
-                                    <img class="git fixLinkForImage" src="./source/github.png" />
-                                </a> -->
+                             
 
                                 <a href= "https://github.com/ShuklaSachin-2/belligerent-crayon-4690" target="_blank"><button  id="resume">Github</button></a>
                                 <a href="https://drive.google.com/file/d/16TbnvKpSbGJ7PNO6xYUE2fi6ONBAiVzl/view?usp=share_link" target="_blank"> <button  id="resume">Deployed</button></a>
@@ -374,14 +372,14 @@
                     <hr />
                     <div class="fix_flex" data-aos="fade-in">
                         <div class="project-image">
-                            <a href="https://frolicking-elf-dd1919.netlify.app/" target="_blank">
+                            <a href="https://whimsical-bavarois-f46ae2.netlify.app/" target="_blank">
                                 <img class="fixImageSizeForTheProject" style="z-index: 1;" src="./source/rentomojo.png" />
                             </a>
                         </div>
                         <div class="project-content" data-aos="fade-in">
                             <div>
                                 <p class="project-overline">Featured Project</p>
-                                <h3 class="project-title"><a href="https://frolicking-elf-dd1919.netlify.app/" target="_blank">Rentomojo.com || Clone</a></h3>
+                                <h3 class="project-title"><a href="https://whimsical-bavarois-f46ae2.netlify.app/" target="_blank">Rentomojo.com || Clone</a></h3>
                                 <div class="project-description">
                                     <p>
                                         It is clone of E-commerce website Rentomojo which deals on the products based on electronics, Furniture and various items. It is a collaborative project which is done with the help of 5 members.
