--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div><a href="#skillSection">Skill</a></div>
                 <div><a href="#workSection">Work</a></div>
                 <div><a href="#contactMeSection">Contact</a></div>
-                <a href="./source/Sachin Shukla_Resume.pdf" download="Sachin Shukla_Resume"><button onclick="download()" id="resume">Resume</button></a>
+                <a href="./source/Sachin Shukla_Resume.pdf" download="Sachin Shukla_Resume" target="_blank"><button onclick="download()" id="resume">Resume</button></a>
             </div>
             <img id="ham" src="./source/ham.png" />
         </div>
