--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div><a href="#skillSection">Skill</a></div>
                 <div><a href="#workSection">Work</a></div>
                 <div><a href="#contactMeSection">Contact</a></div>
-                <a href="./source/Sachin Shukla_Resume.pdf" download="Sachin Shukla_Resume" target="_blank"><button onclick="download()" id="resume">Resume</button></a>
+                <a href="https://drive.google.com/file/d/1xqkA9u1dUFwG5pcCJx4_mbDwfSR219nd/view?usp=share_link "  target="_blank"><button id="resume">Resume</button></a>
             </div>
             <img id="ham" src="./source/ham.png" />
         </div>
@@ -39,7 +39,7 @@
             <div id="skill"><a href="#skillSection">Skill</a></div>
             <div id="work"><a href="#workSection">Work</a></div>
             <div id="contact"><a href="#contactMeSection">Contact</a></div>
-            <a href="./source/Sachin Shukla_Resume.pdf" download="Sachin Shukla_Resume"><button  onclick="download()" id="resumeIn">Resume</button></a>
+            <a href="https://drive.google.com/file/d/1xqkA9u1dUFwG5pcCJx4_mbDwfSR219nd/view?usp=share_link" ><button   id="resumeIn">Resume</button></a>
         </div>
 
         <!-- this is for left floting social media -->
