--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </h1> -->
                 <div>
                     <p class="smallIntro">
-                        Trained, Self-motivated and Hardworking web developer, With a diverse range of skills including Java, SpringBoot, MySQL, HTML, CSS and JavaScript.
+                        Trained, Self-motivated and Hardworking web developer, With a diverse range of skills including Java, SpringBoot, MySQL,Microservices,Junit,Mockito, HTML, CSS and JavaScript.
                     </p>
                 </div>
                 <button id="btn1">Contact Me</button>
@@ -107,7 +107,7 @@
                             Hello! my name is Sachin Shukla.
                         </p>
                         <p class="font color size">
-                            I am a web developer with in-depth knowledge in Java. In a nutshell, I can create web services that may help organizations address
+                            I am a web developer with in-depth knowledge in Java.My techstack is Core-Java,HIBERNATE,Spring-Boot,MySQL,Microservices In a nutshell, I can create web services that may help organizations address
                             <mark> business challenges</mark> and <mark>meet their needs.</mark>
                         </p>
                         <p class="font color size">
